@@ -35,6 +35,7 @@ import javax.swing.border.TitledBorder;
 import javax.swing.JCheckBox;
 import javax.swing.ImageIcon;
 import javax.swing.JDialog;
+import java.net.URI;
 import java.net.URL;
 import javax.swing.JOptionPane;
 
@@ -63,7 +64,10 @@ public class DialogFourier extends JDialog {
         _newScope = newScope;
         super.setModal(true);
         try {
-            this.setIconImage((new ImageIcon(new URL(GlobalFilePathes.PFAD_PICS_URL, "gecko.gif"))).getImage());
+            URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
+            // Fix for Java 21: use URL constructor instead of URI.toURL()
+            URL gifUrl = new URL(picsUrl, "gecko.gif");
+            this.setIconImage(new ImageIcon(gifUrl).getImage());
         } catch (Exception e) {
         }
         this.worksheet = worksheet;
